# Rise

./: .agignore  .chktexrc  .flake8  .gitattributes  .gitignore  .stylelintrc.json  ACFs.tex  Abilities.tex  Acknowledgements.tex  AdvancedClasses.tex  AdvancedCombat.tex  AdvancedFeats.tex  Adventuring.tex  ArcaneInvocations.tex  Attributes.tex  BasicMechanics.tex  Changelog.tex  Classes.tex  Combat.tex  CombatSimplified.tex  Conditions.tex  CoreMagicItems.tex  Description.tex  Equipment.tex  Feats.tex  GEMINI.md  Glossary.tex  Introduction.tex  LaTeXFormatting.tex  LaTeXNewCommands.tex  LaTeXNewEnvironments.tex  LaTeXPackages.tex  LatexSpellDescriptions.tex  Magic Item Creation.txt  Magic.tex  MagicItemArmorAndWeapons.tex  MagicItemBasicsAndCreation.tex  MagicItemCreation.tex  MagicItemIntelligentCursedArtifacts.tex  MagicItemRingsAndRods.tex  (+39 more)
rust/: Cargo.toml  license.txt  rustfmt.toml
rust/combat_results/: difficult_encounter.csv  standard_encounter.csv  standard_encounter.json
rust/src/: calculations.rs  classes.rs  core_mechanics.rs  creatures.rs  equipment.rs  latex_formatting.rs  lib.rs  modules.rs  monsters.rs  simulation.rs  skills.rs  testing.rs
rust/test_goldens/: attack_comparison.md  attribute_statistics.md  brute_attacks.md  character_defenses.md  character_rounds_to_live.md  class_complexity_statistics.md  class_statistics.md  fighter_greatmace_attacks.md  fighter_perception_greataxe.md  fighter_shield_attacks.md  monster_attack_dpr.md  monster_defenses.md  monster_rounds_to_live.md  monster_to_section.md  mystic_attacks.md  pve_accuracy.md  (+6 more)
(+1291 files in other folders)
